--- a/app/globals.css
+++ b/app/globals.css
@@ -2,21 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
-}
-
-main {
-  height: 100%;
-  min-height: calc(100dvh - 12.5rem);
-}
-
-@media screen and (min-width: 768px) {
-  main {
-    min-height: calc(100dvh - 11.25rem);
-  }
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
