--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .pause {
+    animation-play-state: paused;
+  }
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
 }
 
 main {
   height: 100%;
-  min-height: calc(100dvh - 12.5rem);
-}
-@media screen and (min-width: 768px) {
-  main {
-    min-height: calc(100dvh - 11.25rem);
-  }
+  min-height: calc(100dvh - 12rem);
 }
